--- a/languages/es.json
+++ b/languages/es.json
@@ -40,7 +40,8 @@
     "portfolio":{
         "titlePortfolio":"Mis Proyectos",
             "firstProjectDescription":"LifePost es una aplicación diseñada para brindar inspiración y motivación, así como un santuario donde las personas pueden expresarse libremente.",
-            "secondProjectDescriptionTwo":"Es una aplicación MVC cuya función es optimizar y comprimir imágenes, utilizando el entorno de ejecución de JavaScript Node js y Express-js."
+            "secondProjectDescriptionTwo":"Es una aplicación MVC cuya función es optimizar y comprimir imágenes, utilizando el entorno de ejecución de JavaScript Node js y Express-js.",
+            "thirdProjectDescription":"listuser-api es una mini API creada para una prueba técnica. Proporciona gestión de usuarios como creación, listado, actualización y eliminación de usuarios."
     },
     "modal":{
         "titleDate":"FECHA:",
@@ -49,7 +50,9 @@
         "firstModalDecription":"Un espacio donde todos tienen la oportunidad de compartir sus historias con el mundo.",
         "firstDate":"Feb. 2024",
         "secondModalDecription":"Optimiza tus imágenes para tus trabajos y sitios web.",
-        "secondDate":"Ene. 2024"
+        "secondDate":"Ene. 2024",
+        "thirdModalDecription":"listuser proporciona una manera eficiente y sencilla de administrar y listar usuarios ",
+        "thirdDate":"Dic. 2024"
     },
     "socialMedia":{
         "titleSocialMedia":"Redes"
