fix: update translations and styles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,7 +9,7 @@
       "socialMedia": "Social Media"
   },
   "home": {
-    "title": "Hi!",
+    "title": "Hi! I'm",
     "subtitle": "Frontend Developer",
     "work": "View My Projects",
     "cv": "View My CV"
